kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: matrixes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: anardemo.apps.okd.codespring.ro
    http:
      paths:
      - path: /
        backend:
          serviceName: matrixes
          servicePort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: matrixes-prometheus-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: anardemo-prometheus.apps.okd.codespring.ro
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 9090
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: palinta-grafana-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: anardemo-grafana.apps.okd.codespring.ro
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 80
